# collabbots-v1.0

./: .gitignore  CMakeLists.txt  README.md  collabbots-v1.0.cpp
docs/: README.md
docs/icons/: basic_idea.psd
driver/: .gitignore  README.md  controller.py  driver.cpp  driver.ino  driver_old.ino  globals.h  motor_control.h  wifi_rw.h  wifi_rw.ino
hardware/: README.md
hardware/mech/gripper/: assembly.SLDASM  axe_1.SLDPRT  bar_1.SLDPRT  finger_L.SLDPRT  finger_R.SLDPRT  gear_1.SLDPRT  gear_2.SLDPRT  gripper_base.SLDPRT  micro_servo.SLDPRT
hardware/pcbs/: README.md
hardware/pcbs/connection-portal/: connection-portal-cache.lib  connection-portal.bak  connection-portal.kicad_pcb  connection-portal.kicad_pcb-bak  connection-portal.pro  connection-portal.sch  report.rpt
hardware/pcbs/connection-portal/gerbers/: connection-portal-B_Cu.gbl  connection-portal-B_Mask.gbs  connection-portal-B_Paste.gbp  connection-portal-B_SilkS.gbo  connection-portal-Edge_Cuts.gm1  (+6 more)
hardware/pcbs/controller/: controller-cache.lib  controller.bak  controller.kicad_pcb  controller.kicad_pcb-bak  controller.pro  controller.rpt  controller.sch  electrical-rules-check-warnings.erc  fp-info-cache  report.txt
planner/: README.md
planner/kinematics/: fk_3dof_cylindrical.m  fk_draw.m  fk_ik_solver.m  ik_3dof_cylindrical.m
planner/lib/: minpack.cpp  minpack.hpp
planner/trajectory/: reach_3dof_draw.m  trajectory_3dof_draw.m  trajectory_3dof_solver.m
planner/visualization/: fk_draw.m
vision/: CMakeLists.txt  README.md  VideoRead.cpp  VideoWrite.cpp  vision.cpp  vision.h
(+19 files in other folders)
